WIP: minor fixes to examples

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -21,9 +21,8 @@
         "resources"             : [
             {
                 "type"           : "LinkedResource",
-                "url"            : "audio.mp3",
-                "encodingFormat" : "audio/mp3"
-
+                "url"            : "ozymandias.mp3",
+                "encodingFormat" : "audio/mpeg"
             }
         ],
     }
