Extracted issues into github tracker
Light overall cleanup of docs and example

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -43,9 +43,10 @@
       }
       .-sync-media-active-element {
         background-color: yellow;
+        color: darkblue !important;
       }
       .-sync-media-document-playing {
-        color: gray;
+        color: gray !important;
       }
 
     </style>
