minimal experiment with https://github.com/thephilgray/custom-readaloud-plugin

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <meta charset="UTF-8" />
     <title>Ozymandias</title>
     <link href="#wpm" rel="publication" />
     <link href="narration.json" rel="sync-media" type="application/vnd.wp-sync-media+json"/>
@@ -27,7 +28,9 @@
         ]
     }
     </script>
-    <script type="module" src="sync-media/main.js"></script>
+    <script type="text/javascript" src="https://raw.githack.com/thephilgray/custom-readaloud-plugin/feature/accurate-timer/dist/custom-read-aloud-0.2.0.js"> </script>
+    <!-- script type="module" src="https://raw.githack.com/thephilgray/custom-readaloud-plugin/feature/accurate-timer/src/lib/custom-read-aloud.js"> </script -->
+    <script type="module" src="sync-media.js"> </script>
 
     <style type="text/css">
       body {
@@ -71,6 +74,5 @@
     <p id="line13">Of that colossal wreck, boundless and bare,</p>
     <p id="line14">The lone and level sands stretch far away. </p>
   </div>
-  <script type="application/javascript" src="player.js"></script>
 </body>
 </html>
