Fix: stutter gone from sample, added simple playback controls

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -52,6 +52,8 @@
     </style>
 </head>
 <body>
+  <div id="controls"></div>
+
   <h1 id="title">Ozymandias</h1>
   <p id="author">by Percy Bysshe Shelley</p>
 
