Move player code out to its own folder

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ozymandias</title>
     <link href="narration.json" rel="sync-media" type="application/vnd.wp-sync-media+json"/>
-    <script type="module" src="sync-media/main.js"></script>
+    <script type="module" src="../js-player/main.js"></script>
 
     <style type="text/css">
       body {
@@ -87,7 +87,7 @@
     <code id="source"></code>
   </div>
   
-  <script type="application/javascript" src="sync-media/main.js"></script>
+  
 </body>
 
 </html>
