change the mime type to application/vnd.syncnarr+json

--- a/samples/single-document/index.html
+++ b/samples/single-document/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <title>Ozymandias</title>
-    <link href="narration.json" rel="sync-media" type="application/vnd.wp-sync-media+json"/>
+    <link href="narration.json" rel="sync-media" type="application/vnd.syncnarr+json"/>
     <script type="module" src="../js-player/main.js"></script>
 
     <style type="text/css">
