Remove demo from github as it's not playing audio currently
This is a new problem; suspect github pages changed something.

--- a/docs-src/demos/raven/index.html
+++ b/docs-src/demos/raven/index.html
@@ -194,10 +194,10 @@
 
         <h2 id="narration-title">Narration</h2>
         <div>
-            <audio id="narration-audio" src="raven.mp3" controls>
-                <track id="text-sync3" kind="metadata" src="stanza.vtt" label="Stanzas" default/>
-                <track id="text-sync1" kind="metadata" src="line.vtt" label="Lines" default/>
-                <track id="text-sync2" kind="metadata" src="word.vtt" label="Words" default/>
+            <audio id="narration-audio" src="raven.m4a" controls>
+                <track id="stanzas" kind="metadata" src="stanza.vtt" label="Stanzas" default/>
+                <track id="lines" kind="metadata" src="line.vtt" label="Lines" default/>
+                <track id="words" kind="metadata" src="word.vtt" label="Words" default/>
             </audio>
             <div id="narration-highlight">
                 <h3>Highlights:</h3>
